{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 17,
  "lineage": "ceb9d179-19a6-61e2-93ab-b8c3dc146577",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "my-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/zones/us-central1-c/instanceGroups/my-instance-group-tf",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-06-19T23:22:36.319-07:00",
            "enable_cdn": false,
            "fingerprint": "1-yRYA0hxQI=",
            "generated_id": 3450828757388915779,
            "health_checks": [
              "projects/sukrit-singh-426716/global/httpHealthChecks/my-health-check"
            ],
            "id": "projects/sukrit-singh-426716/global/backendServices/my-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-backend-service",
            "port_name": "http",
            "project": "sukrit-singh-426716",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/backendServices/my-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.my-health-check",
            "google_compute_instance_group_manager.my-instance-group",
            "google_compute_instance_template.my-instance-template",
            "google_compute_network.my-network",
            "google_compute_subnetwork.my-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-19T23:21:29.395-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sukrit-singh-426716/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/my-network",
            "priority": 1000,
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-19T23:21:29.438-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sukrit-singh-426716/global/firewalls/allow-iap",
            "log_config": [],
            "name": "allow-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/my-network",
            "priority": 1000,
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/firewalls/allow-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-19T23:21:29.487-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sukrit-singh-426716/global/firewalls/allow-internal-tf",
            "log_config": [],
            "name": "allow-internal-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/my-network",
            "priority": 1000,
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/firewalls/allow-internal-tf",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "my-instance-group"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-19T23:21:29.479-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sukrit-singh-426716/global/firewalls/allow-ssh-tf",
            "log_config": [],
            "name": "allow-ssh-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/my-network",
            "priority": 1000,
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/firewalls/allow-ssh-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "my-forwarding-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/sukrit-singh-426716/global/forwardingRules/my-forwarding-rule",
            "ip_address": "34.128.167.82",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-forwarding-rule",
            "port_range": "80-80",
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/forwardingRules/my-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/targetHttpProxies/my-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.my-backend-service",
            "google_compute_http_health_check.my-health-check",
            "google_compute_instance_group_manager.my-instance-group",
            "google_compute_instance_template.my-instance-template",
            "google_compute_network.my-network",
            "google_compute_subnetwork.my-subnet",
            "google_compute_target_http_proxy.my-http-proxy",
            "google_compute_url_map.my-url-map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sukrit-singh-426716/global/networks/my-network",
            "mtu": 0,
            "name": "my-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2907051091300349146",
            "project": "sukrit-singh-426716",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/my-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "my-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-19T23:21:29.751-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/sukrit-singh-426716/regions/us-central1/routers/my-router-tf",
            "name": "my-router-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/my-network",
            "project": "sukrit-singh-426716",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/regions/us-central1/routers/my-router-tf"
          },
          "dependencies": [
            "google_compute_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "my-router-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "sukrit-singh-426716/us-central1/my-router-tf/my-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sukrit-singh-426716",
            "router": "my-router-tf",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.my-network",
            "google_compute_router.my-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-19T23:21:30.622-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/sukrit-singh-426716/regions/us-central1/subnetworks/my-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sukrit-singh-426716",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/regions/us-central1/subnetworks/my-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "my-http-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-19T23:23:39.075-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/sukrit-singh-426716/global/targetHttpProxies/my-http-proxy",
            "name": "my-http-proxy",
            "project": "sukrit-singh-426716",
            "proxy_bind": false,
            "proxy_id": 2467886252878099460,
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/targetHttpProxies/my-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/urlMaps/my-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.my-backend-service",
            "google_compute_http_health_check.my-health-check",
            "google_compute_instance_group_manager.my-instance-group",
            "google_compute_instance_template.my-instance-template",
            "google_compute_network.my-network",
            "google_compute_subnetwork.my-subnet",
            "google_compute_url_map.my-url-map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "my-url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-19T23:23:28.053-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/backendServices/my-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "nW3lqsXIX5o=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/sukrit-singh-426716/global/urlMaps/my-url-map",
            "map_id": 5912290801242502159,
            "name": "my-url-map",
            "path_matcher": [],
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/urlMaps/my-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.my-backend-service",
            "google_compute_http_health_check.my-health-check",
            "google_compute_instance_group_manager.my-instance-group",
            "google_compute_instance_template.my-instance-template",
            "google_compute_network.my-network",
            "google_compute_subnetwork.my-subnet"
          ]
        }
      ]
    }
  ]
}